[package]
name = "bitcoin"
version = "0.1.0"
authors = ["Matteo Ugolotti <matteo.ugolotti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
rand = "*"
rust-crypto = "*"
tokio = { version = "*", features = ["full"] }
